--- a/app/src/main/res/layout/activity_nearby_locations.xml
+++ b/app/src/main/res/layout/activity_nearby_locations.xml
@@ -1,42 +1,46 @@
-<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
     xml android:version="1.0" encoding="utf-8"?>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    </android.support.v7.widget.Toolbar>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            android:layout_height="wrap_content">
 
-    
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        
-        <EditText
-            android:id="@+id/location_search"
-            android:layout_height="50dp"
-            android:layout_width="314dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:ems="10"
-            android:hint="search..."/>
+        </android.support.v7.widget.Toolbar>
 
-        <ImageButton
-            android:id="@+id/search_address"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:onClick="onClick"
-            android:src="@mipmap/search"/>
-        
-    </RelativeLayout>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_below="@+id/searchButton">
+
+            <fragment android:id="@+id/autocomplete_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                />
+
+        </android.support.v7.widget.CardView>
+
+</LinearLayout>
+
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -47,10 +51,9 @@
         android:layout_height="match_parent"
         android:layout_marginTop="45dp"
         android:layout_alignParentStart="true"
-        tools:context=".NearbyLocations"
-        tools:layout="@layout/activity_nearby_locations2" />
+        tools:context=".NearbyLocations" />
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/second_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,26 +64,19 @@
 
 
         <ImageButton
-            android:id="@+id/btnHeart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="54dp"
-            android:src="@drawable/ic_favorite_border_black_24dp" />
-
-        <ImageButton
             android:id="@+id/btnStar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="98dp"
+            android:layout_marginTop="145dp"
+            android:onClick="starClick"
             android:src="@drawable/ic_star_border_black_24dp" />
 
+
         <RelativeLayout
+            android:id="@+id/relButtons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true">
@@ -114,11 +110,26 @@
 
         </RelativeLayout>
 
+        <android.support.design.widget.BottomNavigationView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/navigation"
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_gravity="bottom"
+            app:menu="@menu/bottom_toolbar" />
 
-    </RelativeLayout>
+
+
+    </LinearLayout>
+
+
+
+   </RelativeLayout>
 
 
 
 
-</RelativeLayout>
+</LinearLayout>
 
