--- a/app/src/main/res/layout/activity_all_users.xml
+++ b/app/src/main/res/layout/activity_all_users.xml
@@ -1,66 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightNavy"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     tools:context=".AllUsers">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:titleTextColor="@color/colorAccent"
+        
+        android:background="@color/lightNavy"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="All Users"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_gravity="center"/>
 
     <Button
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="View All Friends Saved Locations"
         android:id="@+id/btnAllFriendsMap"
-        android:background="@color/colorAccent"/>
+        android:layout_width="300dp"
+        android:layout_below="@+id/toolbar"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/colorAccent"
+        android:text="View All Friends Saved Locations" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerUsers"
-            android:layout_width="match_parent"
-            android:layout_height="369dp"
-            android:padding="15dp"
-            android:textColor="@color/colorAccent">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerUsers"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnAllFriendsMap"
+        android:padding="15dp"
+        android:textColor="@color/colorAccent">
 
-        </android.support.v7.widget.RecyclerView>
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <android.support.design.widget.BottomNavigationView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/navigation"
-            android:background="@color/colorAccent"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:layout_gravity="bottom"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            app:itemIconTint="@color/colorAccent"
+            app:itemTextColor="@color/colorAccent"
+            android:backgroundTint="@color/lightNavy"
+            android:background="?android:attr/windowBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_toolbar" />
 
-    </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
 
 
 
-</LinearLayout>
+
+
+
+</RelativeLayout>
 
