--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,9 @@
 
     <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-
+    <style name="customFab">
+        <item name="android:background">@drawable/fab_label_background</item>
+        <item name="android:textColor">@color/quantum_black_100</item>
+    </style>
 
 </resources>
