--- a/app/src/main/res/layout/users_single_layout.xml
+++ b/app/src/main/res/layout/users_single_layout.xml
@@ -3,48 +3,84 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="120dp"
+    android:background="@drawable/bokeboarder">
 
 
-    <ImageView
-        android:id="@+id/userSingleImage"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/logo"
+        android:layout_width="86dp"
+        android:layout_height="74dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="33dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        app:srcCompat="@drawable/blankpic" />
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="1"
+        android:src="@drawable/pineapplelogo"
+        app:civ_border_color="@color/aqua"
+        app:civ_border_width="3dp" />
+
 
     <TextView
         android:id="@+id/userSingleName"
-        android:layout_width="247dp"
+        android:layout_width="214dp"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/logo"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="118dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="19dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginLeft="101dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="58dp"
         android:text="Display Name"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/blue"
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/userSingleAddress"
-        android:layout_width="247dp"
+    <LinearLayout
+        android:id="@+id/linLay"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/userSingleName"
-        android:layout_alignBottom="@+id/userSingleImage"
+        android:layout_alignBottom="@+id/logo"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="118dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="0dp"
-        android:text="Address"
-        android:textColor="@color/colorAccent"
-        android:textSize="18sp" />
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="4dp">
+
+        <TextView
+            android:id="@+id/userSingleAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/userSingleName"
+            android:layout_alignBottom="@+id/linLay"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="112dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="0dp"
+            android:text="Locations: "
+            android:textColor="@color/blue"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/displayLocationAmt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/userSingleAddress"
+            android:layout_alignBottom="@+id/userSingleImage"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="0dp"
+            android:text=""
+            android:textColor="@color/blue"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+
+
+
+
 </RelativeLayout>
