--- a/app/src/main/res/drawable/fab_label_background.xml
+++ b/app/src/main/res/drawable/fab_label_background.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:thicknessRatio="2.1">
     <solid android:color="@color/offWhite"/>
+    <stroke
+        android:width="1dp"
+        android:color="@color/colorPrimary"></stroke>
+
+
     <padding
         android:bottom="6dp"
         android:right="16dp"
         android:left="16dp"
         android:top="6dp"/>
     <corners
-        android:radius="5dp"/>
+        android:radius="20dp"/>
 
 
 </shape>
