--- a/app/src/main/res/layout/activity_all_users.xml
+++ b/app/src/main/res/layout/activity_all_users.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/bokefulbackground"
     android:orientation="vertical"
     tools:context=".AllUsers">
 
@@ -12,31 +12,20 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:titleTextColor="@color/colorAccent"
-        
-        android:background="@color/lightNavy"
+        app:titleTextColor="@color/blue"
+        android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
     </android.support.v7.widget.Toolbar>
 
 
-    <Button
-        android:id="@+id/btnAllFriendsMap"
-        android:layout_width="300dp"
-        android:layout_below="@+id/toolbar"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/colorAccent"
-        android:text="View All Friends Saved Locations" />
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerUsers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnAllFriendsMap"
+        android:layout_below="@+id/toolbar"
         android:padding="15dp"
-        android:textColor="@color/colorAccent">
+        android:textColor="@color/blue">
 
     </android.support.v7.widget.RecyclerView>
 
@@ -52,9 +41,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
-            app:itemIconTint="@color/colorAccent"
-            app:itemTextColor="@color/colorAccent"
-            android:backgroundTint="@color/lightNavy"
+            app:itemIconTint="@color/blue"
+            app:itemTextColor="@color/blue"
+            android:backgroundTint="@color/colorPrimary"
             android:background="?android:attr/windowBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -63,10 +52,6 @@
 
 
     </android.support.constraint.ConstraintLayout>
-
-
-
-
 
 
 </RelativeLayout>
