--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,45 +10,27 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:layout_height="wrap_content">
-
-    </android.support.v7.widget.Toolbar>
-
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:titleTextColor="@color/buttonBlue"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:id="@+id/linearlay"
+        android:layout_below="@id/toolbar"
         android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/place_info"
-            android:layout_marginLeft="10dp"
-            android:scaleType="centerCrop"
-            android:layout_marginTop="15dp"
-            android:src="@drawable/ic_place_black_24dp"/>
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/place_picker"
-            android:layout_marginLeft="10dp"
-            android:layout_below="@+id/place_info"
-            android:scaleType="centerCrop"
-            android:layout_marginTop="15dp"
-            android:src="@drawable/ic_info_black_24dp"/>
 
         <EditText
             android:id="@+id/editSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            android:textColorHint="@color/colorAccent"
+            android:textColor="@color/blue"
+            android:textColorHint="@color/blue"
             android:hint="Enter Location:" />
 
 
@@ -58,57 +40,75 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:onClick="onMapSearch"
-            android:background="@color/colorAccent"
+            android:background="@color/blue"
             android:text="Search" />
 
 
     </LinearLayout>
 
+
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
+        android:layout_below="@+id/linearlay"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        tools:context=".MapsActivity">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        tools:context=".FriendMapsActivity" />
 
 
-    </fragment>
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraint"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp">
 
-
-
-        <Button
-            android:id="@+id/btnListLoc"
-            android:layout_width="45dp"
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btnSave"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:onClick="onListLocation"
-            android:layout_margin="10dp"
-            android:background="@color/colorAccent"
-            android:text="Listed Locations"></Button>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:fab_colorNormal="@color/colorAccent"
+            app:fab_icon="@drawable/ic_favorite_border_black_24dp"
+            app:fab_labelStyle="@style/customFab"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.899"
+            tools:srcCompat="@tools:sample/backgrounds/scenic">
 
-        <Button
-            android:id="@+id/btnMoreInfo"
-            android:layout_width="45dp"
+        </com.getbase.floatingactionbutton.FloatingActionButton>
+
+
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:layout_margin="10dp"
-            android:onClick="onMoreInfo"
-            android:background="@color/colorAccent"
-            android:text="Nearby Places"></Button>
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:background="?android:attr/windowBackground"
+            android:backgroundTint="@color/colorPrimary"
+            app:itemIconTint="@color/buttonBlue"
+            app:itemTextColor="@color/buttonBlue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:menu="@menu/bottom_toolbar" />
 
-    </LinearLayout>
 
+    </android.support.constraint.ConstraintLayout>
 
-
-
-
-</LinearLayout>
+</RelativeLayout>
 
