--- a/app/src/main/res/layout/activity_nearby_locations.xml
+++ b/app/src/main/res/layout/activity_nearby_locations.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkNavy"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     xml android:version="1.0" encoding="utf-8"?>
@@ -11,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        app:titleTextColor="@color/colorAccent"
+        app:titleTextColor="@color/buttonBlue"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
 
@@ -23,11 +24,23 @@
         android:layout_below="@+id/toolbar"
         android:orientation="horizontal">
 
-        <fragment android:id="@+id/places_autocomplete_fragment"
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/editSearch"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-            />
+            android:layout_weight="4"
+            android:textColor="@color/blue"
+            android:textColorHint="@color/blue"
+            android:hint="Enter Location:" />
+
+        <Button
+            android:id="@+id/searchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:onClick="onMapSearch"
+            android:background="@drawable/roundbuttonlight"
+            android:text="Search" />
 
 
     </LinearLayout>
@@ -44,35 +57,6 @@
         android:layout_alignParentStart="true"
         tools:context=".NearbyLocations" />
 
-    <ImageButton
-        android:id="@+id/btnStar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="185dp"
-        android:src="@drawable/ic_star_border_black_24dp" />
-
-    <ImageButton
-        android:id="@+id/btnEvents"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="225dp"
-        android:src="@drawable/ic_pin_drop_black_24dp" />
-
-    <ImageButton
-        android:id="@+id/btnSaved"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="265dp"
-        android:src="@drawable/ic_favorite_border_black_24dp" />
 
 
     <android.support.constraint.ConstraintLayout
@@ -83,6 +67,51 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btnSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:fab_colorNormal="@color/colorAccent"
+            app:fab_icon="@drawable/ic_favorite_border_black_24dp"
+            app:fab_labelStyle="@style/customFab"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.899"
+            tools:srcCompat="@tools:sample/backgrounds/scenic">
+
+        </com.getbase.floatingactionbutton.FloatingActionButton>
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btnManualEnter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:fab_colorNormal="@color/colorAccent"
+            app:fab_icon="@drawable/ic_near_me_black_24dp"
+            app:fab_labelStyle="@style/customFab"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.224"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.898"
+            tools:srcCompat="@tools:sample/backgrounds/scenic">
+
+        </com.getbase.floatingactionbutton.FloatingActionButton>
+
 
         <com.getbase.floatingactionbutton.FloatingActionsMenu
             android:layout_width="wrap_content"
@@ -106,6 +135,21 @@
             app:layout_constraintVertical_bias="0.896">
 
             <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_action_clear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:onClick="FABclick"
+                app:fab_title=" Clear "
+                app:fab_colorNormal="@color/veryDarkGrey"
+                app:fab_colorPressed="@color/colorAccent"
+                app:fab_icon="@drawable/ic_pin_drop_black_24dp"
+                app:fab_size="mini"/>
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab_action_saved"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -115,7 +159,7 @@
                 android:layout_marginBottom="8dp"
                 android:onClick="FABclick"
                 app:fab_title="Saved "
-                app:fab_colorNormal="@color/quantum_yellow800"
+                app:fab_colorNormal="@color/quantum_purple"
                 app:fab_colorPressed="@color/colorAccent"
                 app:fab_icon="@drawable/ic_pin_drop_black_24dp"
                 app:fab_size="mini"/>
@@ -130,7 +174,7 @@
                 android:layout_marginBottom="8dp"
                 android:onClick="FABclick"
                 app:fab_title="Events"
-                app:fab_colorNormal="@color/quantum_purple"
+                app:fab_colorNormal="@color/blue"
                 app:fab_colorPressed="@color/colorAccent"
                 app:fab_icon="@drawable/ic_pin_drop_black_24dp"
                 app:fab_size="mini"/>
@@ -146,7 +190,7 @@
                 android:onClick="FABclick"
                 app:fab_title="Hotels"
                 app:fab_icon="@drawable/ic_pin_drop_black_24dp"
-                app:fab_colorNormal="@color/colorPrimaryDark"
+                app:fab_colorNormal="@color/green"
                 app:fab_colorPressed="@color/colorAccent"
                 app:fab_size="mini"/>
 
@@ -159,7 +203,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:onClick="FABclick"
-                app:fab_title="Clubs "
+                app:fab_title="Clubs"
                 app:fab_colorNormal="@color/quantum_yellow"
                 app:fab_colorPressed="@color/colorAccent"
                 app:fab_icon="@drawable/ic_pin_drop_black_24dp"
@@ -175,7 +219,7 @@
                 android:layout_marginBottom="8dp"
                 android:onClick="FABclick"
                 app:fab_title=" Food "
-                app:fab_colorNormal="@color/quantum_pink"
+                app:fab_colorNormal="@color/colorPrimaryDark"
                 app:fab_colorPressed="@color/colorAccent"
                 app:fab_icon="@drawable/ic_pin_drop_black_24dp"
                 app:fab_size="mini"/>
@@ -193,9 +237,9 @@
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
             android:background="?android:attr/windowBackground"
-            android:backgroundTint="@color/lightNavy"
-            app:itemIconTint="@color/colorAccent"
-            app:itemTextColor="@color/colorAccent"
+            android:backgroundTint="@color/colorPrimary"
+            app:itemIconTint="@color/buttonBlue"
+            app:itemTextColor="@color/buttonBlue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
