--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -5,99 +5,104 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/lightNavy"
+    android:background="@drawable/bokefulbackground"
     tools:context=".ProfilePage">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
-        android:layout_width="match_parent"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        android:layout_height="wrap_content">
-
-    </android.support.v7.widget.Toolbar>
-
-    <LinearLayout
-        android:id="@+id/lin1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_below="@+id/toolbar"
-        android:layout_gravity="center"
-        android:orientation="vertical">
+        app:titleTextColor="@color/blue"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+    </android.support.v7.widget.Toolbar>
 
-        <ImageView
+    <RelativeLayout
+        android:id="@+id/rel1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="1dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/imageView"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/blankpic"/>
+            android:layout_width="155dp"
+            android:layout_height="147dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/pineapplelogo"
+            app:civ_border_color="@color/aqua"
+            app:civ_border_width="7dp" />
 
         <TextView
             android:id="@+id/displayName"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="40dp"
+            android:layout_below="@id/imageView"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:textColor="@color/colorPrimaryDark"
-            android:text="Username" />
+            android:text="Username"
+            android:textColor="@color/aqua"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/displayAddress"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:gravity="center_horizontal"
-            android:layout_below="@+id/displayName"
-            android:textColor="@color/colorPrimaryDark"
-            android:text="Address" />
+            android:layout_below="@id/displayName"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="Address"
+            android:textColor="@color/aqua"
+            android:textSize="20dp" />
 
 
-    </LinearLayout>
-
-
-
+    </RelativeLayout>
 
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/rel2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/lin1"
-        android:orientation="vertical">
+        android:layout_below="@+id/rel1"
+        android:layout_alignParentStart="true"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="1dp">
 
-    <Button
-        android:id="@+id/btnFriendMap"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        android:background="@color/colorAccent"
-        android:text="View Users's Locations" />
+        <Button
+            android:id="@+id/btnFriendMap"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_below="@+id/btnAddFriend"
+            android:layout_margin="5dp"
+            android:background="@drawable/roundbuttonlight"
+            android:text="View Users's Locations" />
 
 
-    <Button
-        android:id="@+id/btnAddFriend"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        android:layout_below="@+id/btnFriendMap"
-        android:background="@color/colorAccent"
-        android:text="Send Friend Request" />
+        <Button
+            android:id="@+id/btnAddFriend"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/roundbuttonlight"
+            android:text="Send Friend Request" />
 
-    <Button
-        android:id="@+id/btnDeclineFriend"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_below="@+id/btnAddFriend"
-        android:layout_margin="5dp"
-        android:background="@color/colorAccent"
-        android:text="Decline Friend Request" />
+        <Button
+            android:id="@+id/btnDeclineFriend"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btnFriendMap"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/roundbuttonlight"
+            android:text="Test" />
 
     </RelativeLayout>
 
@@ -105,26 +110,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp">
+        android:id="@+id/constraint"
+        android:layout_alignParentBottom="true">
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
             android:background="?android:attr/windowBackground"
-            android:backgroundTint="@color/lightNavy"
-            app:itemIconTint="@color/colorAccent"
-            app:itemTextColor="@color/colorAccent"
+            android:backgroundTint="@color/colorPrimary"
+            app:itemIconTint="@color/blue"
+            app:itemTextColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_toolbar" />
 
 
     </android.support.constraint.ConstraintLayout>
+
+
 
 </RelativeLayout>
