--- a/app/src/main/res/layout/activity_users_locations.xml
+++ b/app/src/main/res/layout/activity_users_locations.xml
@@ -1,53 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkNavy"
     android:orientation="vertical"
-    tools:context=".MainActivity">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-
-    </ScrollView>
+    android:background="@color/lightNavy"
+    tools:context=".ViewUsersFriends">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:titleTextColor="@color/buttonBlue"
-
         android:background="@color/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+        android:layout_width="match_parent"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:layout_height="wrap_content">
 
     </android.support.v7.widget.Toolbar>
 
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerFeed"
-        android:layout_below="@+id/toolbar"
+        android:id="@+id/recyclerFriends"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:textColor="@color/buttonBlue">
+        android:layout_below="@+id/toolbar"
+        android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/constraint"
         android:layout_alignParentStart="true"
+        android:id="@+id/constraint"
         android:layout_alignParentTop="true">
 
         <android.support.design.widget.BottomNavigationView
@@ -56,8 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
-            app:itemIconTint="@color/buttonBlue"
-            app:itemTextColor="@color/buttonBlue"
+            app:itemIconTint="@color/blue"
+            app:itemTextColor="@color/blue"
             android:backgroundTint="@color/colorPrimary"
             android:background="?android:attr/windowBackground"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -67,6 +51,4 @@
 
 
     </android.support.constraint.ConstraintLayout>
-
-
 </RelativeLayout>
