--- a/app/src/main/res/layout/activity_view_listed_locations.xml
+++ b/app/src/main/res/layout/activity_view_listed_locations.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,20 +17,38 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <TextView
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerSavedLocations"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Saved Locations"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_gravity="center"/>
+        android:layout_below="@+id/toolbar"
+        android:layout_height="wrap_content">
 
+    </android.support.v7.widget.RecyclerView>
 
-    <ListView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listViewLocations"
-        android:textColor="@color/colorAccent"
-        android:layout_alignParentStart="true"/>
-</LinearLayout>
+        android:layout_alignParentStart="true"
+        android:id="@+id/constraint"
+        android:layout_alignParentTop="true">
+
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            app:itemIconTint="@color/blue"
+            app:itemTextColor="@color/blue"
+            android:backgroundTint="@color/colorPrimary"
+            android:background="?android:attr/windowBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:menu="@menu/bottom_toolbar" />
+
+
+    </android.support.constraint.ConstraintLayout>
+</RelativeLayout>
