--- a/app/src/main/res/layout/locations_single_layout.xml
+++ b/app/src/main/res/layout/locations_single_layout.xml
@@ -46,7 +46,7 @@
     <TextView
         android:id="@+id/addressStamp"
         android:layout_width="250dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/locationStamp"
         android:layout_alignParentStart="true"
         android:layout_marginStart="120dp"
@@ -63,7 +63,7 @@
         android:layout_below="@id/addressStamp"
         android:layout_alignParentStart="true"
         android:layout_marginStart="120dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="27dp"
         android:text="Rating: "
         android:textColor="@color/white"
         android:textSize="12dp" />
@@ -72,13 +72,13 @@
         android:id="@+id/ratingStamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/addressStamp"
-        android:layout_alignBottom="@+id/addressStamp"
+        android:layout_alignBottom="@+id/profileImage"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="210dp"
-        android:layout_marginLeft="31dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="-37dp"
+        android:layout_marginStart="200dp"
+        android:layout_below="@id/addressStamp"
+        android:layout_marginTop="27dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginBottom="-26dp"
         android:layout_toRightOf="@+id/ratingText"
         android:text="0"
         android:textColor="@color/white"
