--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#292b3d</color>
+    <color name="colorPrimary">#17192C</color>
+    <color name="darkNavy">#292b3d</color>
     <color name="colorPrimaryDark">#FF8A2E</color>
     <color name="colorAccent">#FF2AB1</color>
-    <color name="lightNavy">#2F3246</color>
+    <color name="lightNavy">#2B3054</color>
+    <color name="boarderNavy">#474C6C</color>
+    <color name="green">#1BDE5B</color>
+    <color name="blue">#0039FF</color>
+    <color name="buttonBlue">#2556FF</color>
     <color name="white">#FFFEFC</color>
-    <color name="offWhite">#FEF2FC</color>
+    <color name="offWhite">#FFFEFC</color>
+    <color name="lightYellow">#FFFDB6</color>
+    <color name="yellow">#FFF400</color>
     <color name="startblue">#09c6df</color>
     <color name="endblue">#0bcce6</color>
+    <color name="lightGrey">#C2C5D0</color>
+    <color name="mediumGrey">#84878E</color>
+    <color name="darkGrey">#6F7277</color>
+    <color name="aqua">#00D6FF</color>
+    <color name="veryDarkGrey">#56585B</color>
 </resources>
 
